<resources>
    <string name="app_name">GeeLong</string>
    <string name="agree_terms_privacy">By clicking start, you agree to our  <a href="">Terms Conditions</a></string>

    <string name="signin">Sign In</string>
    <string name="singup">sing Up</string>
    <string name="name">Name</string>
    <string name="name_example_com">Name@example.com</string>
    <string name="address">Address</string>
    <string name="_91_mobile_number">+91 Mobile Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signup">Sign Up</string>
    <string name="signup1">Sign Up</string>
    <string name="login_to_your_account">Login To your account!</string>


    <string name="or_sign_up_with">or Sign Up with</string>
    <string name="next">Next</string>
    <string name="verify_now">Verify Now</string>
    <string name="google_maps_key" />
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pickup">PICK UP</string>
    <string name="drop">DROP</string>
    <string name="no_of_passengers">NO. OF PASSENGERS</string>
    <string name="_7958_swfit_village">7958 Swfit Village</string>
    <string name="search">Search</string>
    <string name="jhon_smit">Jhon smit</string>
    <string name="No_Internet">No Internet</string>
    <string name="confirm_pick_up">Confirm pick-up</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="write_a_review">  <u>write a review</u>.</string>
    <string name="enter_drop_location">Enter drop location</string>
    <string name="enter_pick_up_location">Enter PickUp location</string>
    <string name="api_key">AIzaSyCebJr8QFqFjtgZB1f_InEfWWjPge7PLBE</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="other_reason">description</string>
    <string name="you_will_be_charged_an_additional_25_15_cancellation_fee_on_your_next_trip">You will be charged an additional $25.15 cancellation fee on your next trip.</string>
    <string name="are_you_sure_you_want_to_cancel_this_trip">Are you sure you want to cancel this trip?</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="no_driver_found">No Driver Found</string>
    <string name="confirm">Confirm</string>
    <string name="facebook_app_id">248213840794355</string>
    <string name="fb_login_protocol_scheme">fb248213840794355</string>
    <string name="facebook_client_token">56789</string>
    <string name="payment">Payment</string>
    <string name="please_wait">Please wait</string>
    <string name="finding_driver">Finding Driver</string>
    <string name="cancel">Cancel</string>
    <string name="duration">Duration</string>
    <string name="total_distance">Total Distance</string>
    <string name="waiting_for_driver_acceptance">Waiting for Driver acceptance</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select Time</string>
    <string name="time_selcet">-:-</string>
    <string name="you_have_booked_your_ride">You Have Booked Your Ride</string>
    <string name="your_ride_has_been_booked_successfully">Your Ride has been booked successfully.</string>
    <string name="booked_successful">Booked Successful</string>
    <string name="cancel_trip_history">Cancel Trip History</string>
    >

</resources>