<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:elevation="@dimen/_7sdp"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_6sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_5sdp"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <RelativeLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <TextView
                    android:text="@string/are_you_sure_you_want_to_cancel_this_trip"
                    android:layout_width="@dimen/_240sdp"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppinsmedium"
                    android:textColor="@color/black"
                    android:gravity="start"
                    android:layout_height="wrap_content">

                </TextView>

                <ImageView
                    android:id="@+id/cancal_popup_img"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/cancel_trip_cancel_icon">

                </ImageView>



            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:text="@string/you_will_be_charged_an_additional_25_15_cancellation_fee_on_your_next_trip"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="@dimen/_13ssp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TextView>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/payment_success"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/_18sdp"
            android:layout_marginRight="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_5sdp">

            <TextView
                android:id="@+id/pay_now_fare_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_corner"
                android:fontFamily="@font/poppinsmedium"
                android:paddingTop="@dimen/_12sdp"
                android:text="@string/cancel_trip"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />
        </LinearLayout>




    </LinearLayout>




</androidx.cardview.widget.CardView>