<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_Up">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_189sdp"
        android:orientation="vertical"
        android:background="#F9CB33" >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/sign_up_bg"
            android:scaleType="center">
        </ImageView>


    </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_120sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:cardMaxElevation="9dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@color/white"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/singnup_linera"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rectangle"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSignUpTab1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:background="@drawable/rectangle_black"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center"
                        android:text="@string/signup"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/tvSiginTab2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"

                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center"
                        android:text="@string/signin"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="bold" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/signIn_linear"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rectangle"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSignUpTab3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"

                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/tvSiginTab4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:background="@drawable/rectangle_black"
                        android:fontFamily="@font/poppinsmedium"
                        android:gravity="center"
                        android:text="@string/signin"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textStyle="bold" />


                </LinearLayout>


                <View
                    android:id="@+id/separator"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="#C8C3C3" />

                <LinearLayout
                    android:id="@+id/signUp_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edittext_Name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:background="@drawable/corner_ediitext"
                        android:hint="@string/name"

                        android:inputType="textPersonName"
                        android:padding="@dimen/_10sdp">

                    </EditText>

                    <EditText
                        android:id="@+id/edittext_Name_mail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="@dimen/_8sdp"
                        android:background="@drawable/corner_ediitext"
                        android:hint="@string/name_example_com"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_10sdp">

                    </EditText>

                    <EditText
                        android:id="@+id/edittext_Address"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="@dimen/_8sdp"
                        android:background="@drawable/corner_ediitext"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp">

                    </EditText>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="@dimen/_8sdp"
                        android:background="@drawable/corner_ediitext"
                        android:gravity="center_vertical">

                        <com.gbksoft.countrycodepickerlib.CountryCodePicker
                            android:id="@+id/ccp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/editText_carrierNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="Mobile Number"
                            android:inputType="phone"
                            android:singleLine="true" />
                    </LinearLayout>


                    <RadioGroup
                        android:id="@+id/radioGroup1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView1"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male" />


                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/radioGroup1"
                            android:layout_alignLeft="@+id/radioGroup1"
                            android:layout_marginLeft="@dimen/_20sdp"
                            android:text="@string/female" />


                    </RadioGroup>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:orientation="horizontal"
                        android:padding="@dimen/_5sdp">

                        <TextView
                            android:id="@+id/sign_up_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_corner"
                            android:fontFamily="@font/poppinsmedium"
                            android:paddingTop="@dimen/_12sdp"
                            android:text="@string/signup"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/signin_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_28sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="@string/login_to_your_account"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_margin="@dimen/_8sdp"
                        android:background="@drawable/corner_ediitext"
                        android:gravity="center_vertical">

                        <com.gbksoft.countrycodepickerlib.CountryCodePicker
                            android:id="@+id/ccp1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/editText_carrierNumber1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="Mobile Number"
                            android:inputType="phone"
                            android:singleLine="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:orientation="horizontal"
                        android:padding="@dimen/_5sdp">

                        <TextView
                            android:id="@+id/next_sign_in_btn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/button_corner"
                            android:fontFamily="@font/poppinsmedium"
                            android:paddingTop="@dimen/_12sdp"
                            android:text="@string/next"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/Sign_Up_Text_linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="2"
                        android:background="@color/black"

                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/or_sign_up_with"
                        android:textAlignment="center" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="2"
                        android:background="@color/black" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/Social_media_Linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/rlGoogle"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/white_circle"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/img_gogle"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/img_google" />
                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/rlFb"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/white_circle"
                        android:gravity="center">

                        <ImageView

                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/img_facebook" />
                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/rlTwiter"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/white_circle"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/img_twitter" />
                    </RelativeLayout>


                </LinearLayout>



            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:id="@+id/term_Linear"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:text="@string/agree_terms_privacy"
                android:textStyle="bold">

            </TextView>
        </LinearLayout>


    </RelativeLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>